Changes BD connexion

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -54,7 +54,7 @@ body{
     padding: 20px 10%;
     background-color: rgb(255, 255, 255);
 }
-.historique{
+.graph{
     width: 70%;
     height: 75%;
     position: absolute;
