--- a/src/includes/data.html
+++ b/src/includes/data.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="FR_fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../scripts/sensors.js"></script>
+    <script src="../styles/index.css"></script>
+    
 </head>
 <body>
     <div class="sensors">
         <h2>Capteurs</h1>
         <p><u>Affiche toutes les valeurs des capteurs</u></p>
-        <br>
+      
         <p id="temperature"></p>
         <p id="humidity"></p>
         <p id="CO2"></p>
